// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gLWWeD"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cazQaL"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eqjVSW"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 fqoiau"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 emIzIZ"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 hawOso"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 heWbGB"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eqjVSW"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 fqoiau"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kVwhZo"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 lpfmhn FormField__FormFieldBox-sc-m9hood-0 bNDIlh CheckBoxInput__StyledFormField-sc-16fe619-0 ewTXKX"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 htzMXV FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ilfuES"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jtpCdz StyledCheckBox-sc-1dbk5ju-6 cQZdeZ"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 ixxbFz"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gNnLYp StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fmHSrS"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 heWbGB"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
